--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends '_layout.html' %}
 
-{% block title %} FooFish's Notes{% endblock %}
+{% block title %} Xdp's Notes{% endblock %}
 {% block page_class %} page-home {% endblock %}
 {% block content %}
 <section id="posts" class="posts-expand">
