--- a/templates/about.html
+++ b/templates/about.html
@@ -1,19 +1,23 @@
 {% extends '_layout.html' %}
 
-{% block title %} FooFish's Notes{% endblock %}
+{% block title %} Xdp's introduction{% endblock %}
 {% block page_class %} page-about {% endblock %}
 {% block content %}
 <section id="posts" class="posts-expand">
     <h2 class="post-title">关于作者</h2>
     <p>
-        这是Foofish的个人站点, 一直在互联网行业做技术开发相关工作, 对程序语言有一点研究, 对技术架构有一点实践经验, 技术背景包括:Python、Java、MySQL、NoSQL、Unix/Linux、Web架构。我的电子邮箱是: lzjun567#gmail.com , <a href="http://weibo.com/lzjun567">微博</a>偶尔用
+        这是Xdp的个人站点, 在读硕士, 对程序语言有一点研究, 对技术架构有一点实践经验, 技术背景包括:Python、DeepLearning、Django、Unix/Linux、Web架构。我的电子邮箱是: xdp0000000zz@gmail.com，其他基本不用。
     </p>
      <h2 class="post-title">关于博客</h2>
     <p>
-        博客基于Django搭建而成，页面使用的Next模版，部署在一台<a href="https://www.digitalocean.com/?refcode=af4cff8f42bc">DigitalOcean</a>的服务器上，该节点在 SFO1 区，之所以用国外的服务器是因为国内的主机都要繁琐的备案，最重要的是部署在国外的话还可以顺带用shadowsocks来科学上网，当然它的价格也非常公道。
+        博客基于Django搭建而成，页面使用的Next模版，部署在一台树莓派上，利用FRP映射到一个具有公网IP的VPS上，VPS用的搬瓦工，之所以用国外的服务器是因为国内的主机和域名都要繁琐的备案，最重要的是部署在国外的话还可以顺带用shadowsocks来科学上网，当然它的价格也非常公道（VPS120元/年，域名7元/年）。
     </p>
+    <h2 class="post-title">关于树莓派</h2>
+    <P>
+        不得不感慨一下树莓派的性能，我现在挂着shairport、samba、这个网站(虽然用的是sqlite)、aria2、youtube-dl-server、frp，cpu的占用也不超过10%。曾今跑过ffmeg压缩一个10G的视频，4天，持续80℃，还没爆炸，要啥自行车？？
+    </P>
     <p>
-        博客的初衷是希望把自己平常总结的东西记录下来，以便不时之需可以翻阅，内存有限（记性不好），只能借用外界载体（博客）来存储这些信息。
+        博客的初衷是希望把自己平常总结的东西记录下来（估计写的热情不会太高），以便不时之需可以翻阅，内存有限（记性不好），只能借用外界载体（博客）来存储这些信息。
     </p>
 
 </section>
