--- a/templates/_partials/head.html
+++ b/templates/_partials/head.html
@@ -8,9 +8,9 @@
 <meta http-equiv="Cache-Control" content="no-transform"/>
 <meta http-equiv="Cache-Control" content="no-siteapp"/>
 
-<link rel="shortcut icon" href="/static/favicon.ico" />
+<link rel="shortcut icon" href={% static 'favicon.ico' %}/>
 
-<link rel="bookmark"href="/static/favicon.ico" />
+<link rel="bookmark"href={% static 'favicon.ico' %}/>
 
 
 {% if theme.google_site_verification %}
