--- a/templates/_macro/reward.html
+++ b/templates/_macro/reward.html
@@ -4,10 +4,10 @@
     <button id="rewardButton" disable="enable" onclick="var qr = document.getElementById('QR'); if (qr.style.display === 'none') {qr.style.display='block';} else {qr.style.display='none'}">
       <span>赏</span>
     </button>
-    <div id="QR" style="display: none;">
+    <div id="QR" style="display: none">
       {% if theme.wechatpay %}
         <div id="wechat" style="display: inline-block">
-          <img id="wechat_qr" src="{{ theme.wechatpay }}" alt="{{ theme.author }} WeChat Pay"/>
+           <img id="wechatpay" src="{{ theme.wechatpay }}" alt="{{ theme.author }} WeChat Pay"/>
           <p>微信打赏</p>
         </div>
       {% endif %}
